# main-site-templats

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  add_examples.py  architecture.md  docker-compose.yml  main.py  pyproject.toml
app/: auth.py  config.py  database.py  llm.py  main.py  schemas.py  utils.py
app/routers/: admin.py  projects.py
app/static/css/: style.css
app/static/js/: main.js  particles.js
app/templates/: base.html  index.html
app/templates/admin/: dashboard.html  login.html  project_form.html  tweak_form.html
