[project]
name = "main-site-templats"
version = "0.1.0"
description = "FastAPI лендинг с админ-панелью для управления проектами"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-multipart",
    "python-dotenv",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "starlette",
    "itsdangerous",
    "openai",
    "httpx",
]
